07182013 -> jonnyboy -> fixed bug in threaded postprocess
						attempt to fix sab view queue
07162013 -> jonnyboy -> changed output for nzb errors during nfo processing
						fixed bug in threaded import using tmux
						fixed pass by reference error
						added group check in binaries scan
						typo in postprocess.php
						fixed bug in grabnzbs
						fixed bug in nfo nntp connection
						added option to import gzipped nzbs, not working in www/admin/nzb-import.php
						changed import copy file to save stream, increased import speed
						fixed typo in namecleaning.php
07152013 -> jonnyboy -> replaced external decrypt hashes script with internal one
						added preg_replace to grabnzbs and nzb-import to remove part number from end of subject
07152013 -> kevin    -> update namecleaning     Added some regex to name cleaning.
						Make sure that yEnc is before part count in binaries.php (some High Compressed virus posts were getting through).
07142013 -> jonnyboy -> reverted last
						changed default user view to list view
						updated rarinfo libs
						added additional monitor paths in tmux - request
						added limit to requestID per run
						added powerline segment for NNTP connections - ThePeePs
						added lines to monitor to show NNTP connections - Mike1
07132013 -> jonnyboy -> gave GrabNZBs its own thread count
						fixed type errors
						typos
						cleanup backfill.php
07132013 -> Junkman690 -> readd RSS namespace to make the rss feeds work again. Make it point to nZEDb install for info
07122013 -> jonnyboy -> added NNTP error checking in postprocess and nfo
						nzb-import and grabNZBs now use site edit Crosspost time
						fixed a bug when switch nntp provider and groups not available or invalid first_post
07112013 -> jonnyboy -> tmux -added option to use removecrapreleases all or just 1 setting
						fixed bug in postprocess_threaded.py
07112013 -> jonnyboy -> added 3 loop limit to releases stage4567